--- a/story/collection/NaukraniAurUskaPati.html
+++ b/story/collection/NaukraniAurUskaPati.html
@@ -629,7 +629,7 @@ Turant hi Kamla ko lekar bed pe gir gaya. Kamla ko bhi sex ki aag chad gayi thi 
  <br />
  Kuch seconds hi hue the ki ek aur karara dhakka Kamla ki gaand pe pada. Is baar mera pura lund Kamla ki haseen gaand mai utar gaya tha.<br />
  <br />
- Kamla: Aaaaaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhhhhhhhhhhhhhh sahab mar gayi re. Gaand faadne ka irada hai kya sahab?.<br />
+ Kamla: aaaaaaaaaaaaaaaaahhhhhhhhhh sahab mar gayi re. Gaand faadne ka irada hai kya sahab?.<br />
  <br />
  Me: Bas ho gaya Kamla. .<br />
  <br />
@@ -945,7 +945,7 @@ Turant hi Kamla ko lekar bed pe gir gaya. Kamla ko bhi sex ki aag chad gayi thi 
  <br />
  Mere dono ungliya bahut hi ragad kar chut ke ander bahar ho rahi thi. Jisse karan Nayna ki chut mai ek sailaab ban raha tha. Mere ungliyo teji se ander bahar hone ke karan woh sailaab tut gaya. Aur chut se paani ki dhara bah nikli.<br />
  <br />
- Nayna: Aaaaaaaaaaaaaaaaaaaaaahhhhhhhhhhhhhhhhhhhhhhhhhhh Rohittttttttttttttttttttttttttt.<br />
+ Nayna: aaaaaaaaaaaaaaaaahhhhhhhhhhh Rohittttttttttttttttttttttttttt.<br />
  <br />
  Nayna ka sharir kaap raha tha. Nayna bahut tej tej saase le rahi thi. Uski saase kabu mai nahi aa rahi thi. Kuch der baad jab Nayna normal hui.<br />
  <br />
@@ -2265,7 +2265,7 @@ Agle din subah utha.<br />
  <br />
  Muzhe laga ki Nayna romantic ho rahi hai mai bola "Nayna darling".<br />
  <br />
- Tabhi Nayna ne jordaar lath mere aandgolo pe maar di. Aur mai dard se chilla utha "aaaaaaaaaaaaaaaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh".<br />
+ Tabhi Nayna ne jordaar lath mere aandgolo pe maar di. Aur mai dard se chilla utha "aaaaaaaaaaaaaaaaahhhhhhhhhhhh".<br />
  <br />
  Mere aankho se aansu nikal pade the. Mai hath ko aandgolo pe le jaakar masalna chah raha tha. Lekin mere hath bandhe hue the. Isliye mai kuch nahi kar saka sivay dard pine ke.<br />
  <br />
@@ -2888,11 +2888,11 @@ Kamla ki baate sunkar mai Kamla pe toot pada. Maine bhi Kamla ki chut pe muh rak
  <br />
  Nayna: Mai bhi kaha mana kar rahi hu. Aajao.<br />
  <br />
- Jitu Bola thik hai. Aur fir ek zor ka dhakka maara. Jitu ka lund Nayna ki tight chut ko chowda karta hua faakkkkkkkkkkk se 3 inch ander ghus gaya. Nayna ne khud ko dard ke liye taiyaar kar rakha tha par fir bhi uski chikh nikal gayi “aaaaaaaaaaaaaaaaaaaaaaaaaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii” aur usne apne data bhich liye. Nayna ki chut mai itna bada aur mota lund pehele nahi ghusa tha. Aaj pheli baar Jitu ka bada lund Nayna ki chut ko uski shamta se jayada chowdi kar raha tha.<br />
+ Jitu Bola thik hai. Aur fir ek zor ka dhakka maara. Jitu ka lund Nayna ki tight chut ko chowda karta hua faakkkkkkkkkkk se 3 inch ander ghus gaya. Nayna ne khud ko dard ke liye taiyaar kar rakha tha par fir bhi uski chikh nikal gayi “aaaaaaaaaaaaaaaaiiiiiiiiiiiiiii” aur usne apne data bhich liye. Nayna ki chut mai itna bada aur mota lund pehele nahi ghusa tha. Aaj pheli baar Jitu ka bada lund Nayna ki chut ko uski shamta se jayada chowdi kar raha tha.<br />
  <br />
  Ye toh Kamla aur muzhe bhi pata chal raha tha ki kaise Nayna ki chut ne Jitu ke lund ko kas ke pakad rakha hai. Agar shayad koi aur hota toh uske lund ko toh hilne bhi nahi deti Nayna ki chut.<br />
  <br />
- Nayna ko kuch aaram milta isse phele hi Jitu ne ek aur damdaar dhakka lagaya. Aur Jitu ka lund Nayna ki chut ko faadta hua aur gahrai mai uatar gaya. Is dhakke mai Jitu ka lund lagbhag 7 inch chala gaya tha. Jis karan Nayna ke muh se fir chikh nikali ”aaaaaaaaaaaaaaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii“ ye dhakka Nayna ke liye bahut dardkari tha. Usne Nayna ki aankho se aansu bahne ke liye majbur kar diya tha.<br />
+ Nayna ko kuch aaram milta isse phele hi Jitu ne ek aur damdaar dhakka lagaya. Aur Jitu ka lund Nayna ki chut ko faadta hua aur gahrai mai uatar gaya. Is dhakke mai Jitu ka lund lagbhag 7 inch chala gaya tha. Jis karan Nayna ke muh se fir chikh nikali ”aaaaaaaaaaaaaaaaaiiiiiiiiiiiiiiiii“ ye dhakka Nayna ke liye bahut dardkari tha. Usne Nayna ki aankho se aansu bahne ke liye majbur kar diya tha.<br />
  <br />
  Ek baat toh saaf thi ki agar koi pati apni patni ke khadoos pan pe gussa ho aur woh uski aankho pe aansu dekhe toh use bahut sukoon milta hai. Jo muzhe is wakt mil raha tha. Muzhe Nayna ke ankho se aansu bahut ache lag rahe the.<br />
  <br />
@@ -2910,7 +2910,7 @@ Kamla ki baate sunkar mai Kamla pe toot pada. Maine bhi Kamla ki chut pe muh rak
  <br />
  Jitu: ha ha ha meri randi. Tu meri randi hai. Tu hi toh muzhe maza degi. Aur Jitu ne ek baar fir josh mai aakar ek zor ka dhakaadiya aur uska lund Nayna ki chut ki nason ko chowdi karta hua 11 inch ander sama gaya.<br />
  <br />
- Nayna: Aaaaaaaaaaaaaaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiuuuuuuuuuuuuuuuummmmmmmmm.<br />
+ Nayna: aaaaaaaaaaaaaaaaiiiiiiiiiiiiiiiuuuuuuuuuuu<br />
  <br />
  <img src="https://i.pinimg.com/564x/f5/53/21/f55321173af87b2a6a25c1610b4a0279.jpg" alt="">
  Jitu Jaanta tha ye dhakka bahut dard dayak hoga Nayna ke liye islye Jitu ne dhakka maarkar sidha apne hoth Nayna ke hoth pe rakh diye. Ye wala dhakka bahut darddayak tha Nayna ke liye. Aaj Jitu ka lund Nayna ki chut ki us gahria mai utar gaya tha jaha tak koi bhi lund nahi gaya tha. Nayna kisi machli ki tarah chatpata rahi thi. Aur apne hath Jitu ke chati pe rakhkar use dhakelne ki koshish kar rahi thi.<br />
@@ -2991,7 +2991,7 @@ Kamla ki baate sunkar mai Kamla pe toot pada. Maine bhi Kamla ki chut pe muh rak
  <br />
  Kuch der tak yahi chalta raha fir Jitu ne apna pura lund nikala. Jaise hi Jitu ka lund Nayna ki chut se nikla. Chut ka muh thodi der ke liye khula ka khula rah gaya. Aur fir woh sikud kar band hone laga.<br />
  <br />
- Jitu Ne Nayna ki chut pe thuka fir apna lund lekar chut ke muh pe upar niche karke apne thuk ko lund aur chut pe failane laga. Nayna ko bhi Jitu ko is tarah lund ko upar niche karna bahut accha lag raha tha. Lekin tabhi Jitu ne ek karara dhakka diya aur uska lund sarsarata hua pura Nayna ki chut mai ghus gaya. Nayna ko iski umeed nahi thi aur Nayna ke muh se ”aaaaaaaaaaaaaaaaaaaaahhhhhhhhhhhhhhhhhhhhhhhhh” ki chikh nikali. Ye chikh bata rahi thi Nayna ko dard ke sath is baar maza bhi aaya tha. Lekin udhar Jitu ruka nahi usne fir se apna lund pura bahar nikala aur fir se ek hi baar mai ander dal diya.<br />
+ Jitu Ne Nayna ki chut pe thuka fir apna lund lekar chut ke muh pe upar niche karke apne thuk ko lund aur chut pe failane laga. Nayna ko bhi Jitu ko is tarah lund ko upar niche karna bahut accha lag raha tha. Lekin tabhi Jitu ne ek karara dhakka diya aur uska lund sarsarata hua pura Nayna ki chut mai ghus gaya. Nayna ko iski umeed nahi thi aur Nayna ke muh se ”aaaaaaaaaaaaaaaaahhhhhhhhhh” ki chikh nikali. Ye chikh bata rahi thi Nayna ko dard ke sath is baar maza bhi aaya tha. Lekin udhar Jitu ruka nahi usne fir se apna lund pura bahar nikala aur fir se ek hi baar mai ander dal diya.<br />
  <br />
  Ye silsila chalta raha. Jitu apna kala lund pura bahar nikal kar pura ek baar mai ander daal raha tha aur Nayna aaahhhhh aaaaaaaaahhhhhhhh aaaaahhhhhhhh ki awaaze nikal rahi thi.<br />
  <br />
@@ -3621,7 +3621,7 @@ Nayna: Jitu bas aisi hi chodte raho. Bahut maza aaraha hai.<br />
  <br />
  Nayna: aaaaaaaaaaiiiiiiiiiiiii aaaaaaaaaaaaiiiiiiiiiiiii aaaaaaaaaaaaaaaiiiiiiiiiiiiiiiii.<br />
  <br />
- Jitu Ne Nayna ke hoth band karke uske awaaze band kar di par abhi bhi dabi dabi awaaze aarahi thi "uuuuuuuuuuuummmmmmmmmmmmmmmmmmu ummmmmmmmmmmmmmm uuuuuuuuuuuuummmmmmmmmmmmmmmmmmmm".<br />
+ Jitu Ne Nayna ke hoth band karke uske awaaze band kar di par abhi bhi dabi dabi awaaze aarahi thi uuuuuuuuuuuuuuuuuuuuummmmhmm.<br />
  <br />
  <img src="https://i.pinimg.com/564x/c3/63/96/c36396201c2690c89dc56b325861a432.jpg" alt="">
  Jitu Itni bedardi se chod raha tha ki Nayna ne apne nakhun Jitu ki pith mai ghusa diye the par Jitu ne Nayna ki chut ki chatni banana chodha nahi aur fir 15 minute baad faaaaaaaaaaaaakkkkkkkkkkkkkkkkkkkkk se apna lund nikala aur Nayna ki chaati pe baith gaya aur apna lund hilane laga.<br />
@@ -3632,7 +3632,7 @@ Nayna: Jitu bas aisi hi chodte raho. Bahut maza aaraha hai.<br />
  <br />
  Aur fir Jitu ne apna gadha gadha safed virya apne kaale lund se nikala jo Nayna ke chehre pe gira.<br />
  <br />
- Jitu: aaaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhhhhhhhhhhhhhhhh maza aagaya.<br />
+ Jitu: aaaaaaaaaaahhhhhhhhhhhhhhh maza aagaya.<br />
  <br />
 <img src="https://i.ibb.co/SXcPjrt/17085366.gif" alt="[Image: 17085366.gif]"  /></div>
 <br />
@@ -4240,11 +4240,11 @@ Shaam ke 8 baj chuke the.<br />
  <br />
  Jitu: Hai ha tu meri randi hai<br />
  <br />
- Fir Jitu ne Nayna ko uthakar pith ke bal patak diya aur khichkar uska sir palang se niche latka diya aur apna 13 inch ka lund muh mai utar diya. Fir zor zor se muh ko chodne lagta hai. Jitu ka lund Kamla aur muzhe Nayna ke gale ke upar se aage piche hota dikh raha tha. Nayna<span style="color: black;" class="mycode_color"> apne pairon ko patak patak kar chatpata rahi thi. <br />
+ Fir Jitu ne Nayna ko uthakar pith ke bal patak diya aur khichkar uska sir palang se niche latka diya aur apna 13 inch ka lund muh mai utar diya. Fir zor zor se muh ko chodne lagta hai. Jitu ka lund Kamla aur muzhe Nayna ke gale ke upar se aage piche hota dikh raha tha. Nayna> apne pairon ko patak patak kar chatpata rahi thi. <br />
  <br />
 <br />
-<span style="color: black;" class="mycode_color"><img src="https://i.ibb.co/gMsb8dm/b67a28f9dff50eabcca466bfd5735f2a791f6639.gif" alt="[Image: b67a28f9dff50eabcca466bfd5735f2a791f6639.gif]"  /></div>
-<span style="color: black;" class="mycode_color"><br />
+><img src="https://i.ibb.co/gMsb8dm/b67a28f9dff50eabcca466bfd5735f2a791f6639.gif" alt="[Image: b67a28f9dff50eabcca466bfd5735f2a791f6639.gif]"  /></div>
+><br />
  Nayna buri tarah se tadap rahi thi. Nayna ke muh se kewal gu gu gu gu ki aawaj nikal rahi thi. Nayna Jitu ke bade lund ke dhakko ko jhelne mein asamarth thi. Nayna ki aankhon se aasu beh rahe the. Nayna ne bahut haath pair pheke lekin Jitu toh nirdai hokar Nayna ke muh ko chode ja raha tha. Nayna ke aankho se assu nikalne lage the. Aur aankhe bahar aane ko thi. Nayna ke muh se dher sara thook nikal raha tha jo uske chehre se hokar niche gir raha tha. Ye dardnaak scene 30 minute chala aur Jitu ne fir apna virya Nayna ke gale ke niche chod diya jise Nayna ko nigalne pada. Aur fir Jitu wahi bed pe baith gaya. Nayna nidhal hokar besudh si padi thi.<br />
  <br />
  Jitu fir bathroom chala gaya.<br />
@@ -4426,7 +4426,7 @@ Kamla fir kamre mai jakar bag se ek bottle lekar aagayi. Jiski nook 3 inch lambi
  <br />
  Nayna ko darr lag raha tha isliye jo Kamla ne kaha woh karne lag gayi. Nayna Kamla ki chut chusne lagi.<br />
  <br />
- Tabhi Jitu ne ek apni kamar ka ek jordaar jhaktka maara aur uske mote lund ka topa gupppppppppppppp kar ke Nayna ki gaand ka ched ko buri tarah choudi karte hue ander ghus gaya aur Nayna dard se chilla padi "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii".<br />
+ Tabhi Jitu ne ek apni kamar ka ek jordaar jhaktka maara aur uske mote lund ka topa gupppppppppppppp kar ke Nayna ki gaand ka ched ko buri tarah choudi karte hue ander ghus gaya aur Nayna dard se chilla padi aaaaaaaaaaahhhhhhhhhhhhhhh.<br />
  <br />
  Nayna ne apne daat bhich liye the aur aankhe band kar li thi.<br />
  <br />
@@ -4479,7 +4479,7 @@ Kamla fir kamre mai jakar bag se ek bottle lekar aagayi. Jiski nook 3 inch lambi
  <br />
  Kamla ne Nayna ke hath ko Jitu ke hatho mai pakdaya aur fir woh uth kar ek kapda laayi aur Nayna ke muh mai thus diya aur fir se Nayna ke hatho ko pakad liya aur fir Jitu vapas apne mote lund ko bina raham dhikhaye Nayna ki komal gaand ke ander thusne laga.<br />
  <br />
- Nayna ka muh lal ho gaya tha. Aur uska sharir dard se kaanp raha tha aur uske muh se "uummmmmmmmmmmmmmmmmmu uuuuuuuuummmmmmmmmmmmmmmmmmmmmm uuuuuuuuuuummmmmmmmmmmmmmm ki awaaze aarahi thi. Aur aankhe bilkul lal pad gayi thi aur unmeinse aansu bah rahe the.<br />
+ Nayna ka muh lal ho gaya tha. Aur uska sharir dard se kaanp raha tha aur uske muh se "aaaaaaaaaaahhhhhhhhhhhhhhhki awaaze aarahi thi. Aur aankhe bilkul lal pad gayi thi aur unmeinse aansu bah rahe the.<br />
  <br />
  Udhar office me.<br />
  <br />
@@ -4561,7 +4561,7 @@ Kamla fir kamre mai jakar bag se ek bottle lekar aagayi. Jiski nook 3 inch lambi
  <br />
  Sushil: Sir ki wife aur sir mein ek din jhagda ho gaya tha aur issi bich sir ki wife ne heel wale sandle inke lund pe maar di tab se inke lund khada hone mai dikkat aagayi.<br />
  <br />
- Manoj: Hhhhaaaaaaaaaaaaaaaahaaaaaaaaaaaaaaaaahaaaaaaaaa. Matlab iski tubelight fuse ho gayi.<br />
+ Manoj: aaaaaaaaaaahhhhhhhhhhhhhhh Matlab iski tubelight fuse ho gayi.<br />
  <br />
  Sushil: Aage bhi suno.<br />
  <br />
