--- a/stories.html
+++ b/stories.html
@@ -164,6 +164,12 @@
             </div>
         </a>
 
+        <a href="story/collection/kotagang.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/enabled_hi/564x/4e/dd/ce/4eddceb9b3622dad041fe23c41c1093e.jpg" alt="Adventure Stories">
+                <div class="stories-title">Kota Me Gangbang</div>
+            </div>
+        </a>
 
         <a href="story/collection/">
             <div class="stories-item">
