--- a/stories.html
+++ b/stories.html
@@ -163,11 +163,67 @@
                 <div class="stories-title">Harami Naukrani aur uska chudakkad Pati</div>
             </div>
         </a>
+        <a href="story/collection/monika.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/c5/d7/28/c5d728a03b9464ef50f994354467dd5b.jpg" alt="Adventure Stories">
+                <div class="stories-title">Monika Ki Saza</div>
+            </div>
+        </a>
+
+        <a href="story/collection/radhika.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/96/ca/0c/96ca0c50c63abb0dfe98a79613bf1ebd.jpg" alt="Adventure Stories">
+                <div class="stories-title">Radhika</div>
+            </div>
+        </a>
+
+        <a href="story/collection/monikaandradhika.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/2e/41/7b/2e417bb9eb2846fc7c4ede7a9b46e171.jpg" alt="Adventure Stories">
+                <div class="stories-title">monika and Radhika</div>
+            </div>
+        </a>
 
         <a href="story/collection/kotagang.html">
             <div class="stories-item">
                 <img src="https://i.pinimg.com/enabled_hi/564x/4e/dd/ce/4eddceb9b3622dad041fe23c41c1093e.jpg" alt="Adventure Stories">
                 <div class="stories-title">Kota Me Gangbang</div>
+            </div>
+        </a>
+
+        <a href="story/collection/aashif.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/ad/f5/ba/adf5baa906efdfcefb2d44b3d522fff4.jpg" alt="Adventure Stories">
+                <div class="stories-title">aashif</div>
+            </div>
+        </a>
+
+        <a href="story/collection/aanchal.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/8d/c0/20/8dc02030af4809cf9612f2d9a1934c84.jpg" alt="Adventure Stories">
+                <div class="stories-title">Anchal</div>
+            </div>
+        </a>
+
+
+        <a href="story/collection/ghamandibiwi.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/enabled_hi/564x/f2/da/c3/f2dac314c264c32deb28d1a8327e9019.jpg" alt="Adventure Stories">
+                <div class="stories-title">ghamandi Biwi Ka Ghamand Toda</div>
+            </div>
+        </a>
+
+        <a href="story/collection/">
+            <div class="stories-item">
+                <img src="" alt="Adventure Stories">
+                <div class="stories-title"></div>
+            </div>
+        </a>
+
+        <a href="story/collection/">
+            <div class="stories-item">
+                <img src="" alt="Adventure Stories">
+                <div class="stories-title"></div>
             </div>
         </a>
 
