--- a/stories.html
+++ b/stories.html
@@ -55,7 +55,6 @@
             display: grid;
             grid-template-columns: repeat(6, 1fr);
             gap: 40px;
-            margin-bottom: 10px;
             margin-top: 10px;
         }
 
@@ -172,7 +171,14 @@
 
         <a href="story/collection/radhika.html">
             <div class="stories-item">
-                <img src="https://i.pinimg.com/564x/96/ca/0c/96ca0c50c63abb0dfe98a79613bf1ebd.jpg" alt="Adventure Stories">
+                <img src="https://i.pinimg.com/564x/a2/80/08/a280088a6277c2f5ed18e138ee39b339.jpg" alt="Adventure Stories">
+                <div class="stories-title">Radhika</div>
+            </div>
+        </a>
+
+        <a href="story/collection/radhika2.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/6e/1c/84/6e1c845d56b76d8e5e7f4065d41a704c.jpg" alt="Adventure Stories">
                 <div class="stories-title">Radhika</div>
             </div>
         </a>
@@ -213,10 +219,108 @@
             </div>
         </a>
 
-        <a href="story/collection/">
+        <a href="story/collection/Train.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/736x/95/ec/87/95ec87f8433b7aef6d1dc9c8f0255f6f.jpg" alt="Adventure Stories">
+                <div class="stories-title">Train me Chudai</div>
+            </div>
+        </a>
+
+        <a href="story/collection/Police.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/ef/72/80/ef72800712e76e8d3721e196116da98d.jpg" alt="Adventure Stories">
+                <div class="stories-title">Police ke maje</div>
+            </div>
+        </a>
+
+        <a href="story/collection/randibiwi.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/736x/78/85/8d/78858db82b6133e7f230b0f3c2e9ff1f.jpg" alt="Adventure Stories">
+                <div class="stories-title">Patni Bani randi</div>
+            </div>
+        </a>
+
+        <a href="story/collection/chachi.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/a5/ed/25/a5ed25f096e402133ad48301a2646869.jpg" alt="Adventure Stories">
+                <div class="stories-title">chachi bani randi</div>
+            </div>
+        </a>
+
+        <a href="story/collection/chudakkadbiwi.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/dd/72/ad/dd72ad2a53ce62fc95b325cb2767afee.jpg" alt="Adventure Stories">
+                <div class="stories-title">Chudakkad Biwi</div>
+            </div>
+        </a>
+
+        <a href="story/collection/kareena.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/736x/b7/f9/ba/b7f9ba7ebc905e83ab6341164c90e828.jpg" alt="Adventure Stories">
+                <div class="stories-title">Kareena Ka Gangbang</div>
+            </div>
+        </a>
+
+        <a href="story/collection/jabardastchudai.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/4f/07/ef/4f07efb05dc0e97711c270a4249975ae.jpg" alt="Adventure Stories">
+                <div class="stories-title">jabradast Chudai</div>
+            </div>
+        </a>
+
+        <a href="story/collection/saalikishadi.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/c4/19/2e/c4192e2bcef796969ab2deed183a7a05.jpg" alt="Adventure Stories">
+                <div class="stories-title">saali ki shaadi</div>
+            </div>
+        </a>
+
+        <a href="story/collection/smallmistake.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/9b/34/e4/9b34e4fc7dd3f6dd2b8afcb6f8204f6c.jpg" alt="Adventure Stories">
+                <div class="stories-title">small Mistake</div>
+            </div>
+        </a>
+
+        <a href="story/collection/smallmistake2.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/22/a2/5b/22a25b30e2360db87f4c2f163a1f6cfc.jpg" alt="Adventure Stories">
+                <div class="stories-title">small mistake - 2</div>
+            </div>
+        </a>
+
+        <a href="story/collection/erosapartment.html">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <div class="stories-title">Eros Apartment ke Kisse Kahaniya</div>
+            </div>
+        </a>
+
+        <a href="story/collection/anjali.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/8d/34/a4/8d34a4e334ceadf85d55c96775f7dc2b.jpg" alt="Adventure Stories">
+                <div class="stories-title">Anjali</div>
+            </div>
+        </a>
+
+        <a href="story/collection/anjali2.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/cb/6b/97/cb6b97a01808b2f3887975f8b6e440f7.jpg" alt="Adventure Stories">
+                <div class="stories-title">Anjali fasi buddho me</div>
+            </div>
+        </a>
+
+        <a href="story/collection/rashmi.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/736x/ad/74/09/ad7409aed9c1f479120852ae97274305.jpg" alt="Adventure Stories">
+                <div class="stories-title">Rashmi</div>
+            </div>
+        </a>
+
+        <a href="story/collection/Rakail.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/30/96/64/3096645f40212d990724a3d80623166f.jpg" alt="Adventure Stories">
+                <div class="stories-title">Muslim ki Rakhail</div>
             </div>
         </a>
 
@@ -233,6 +337,19 @@
                 <div class="stories-title"></div>
             </div>
         </a>
+        <a href="story/collection/">
+            <div class="stories-item">
+                <img src="" alt="Adventure Stories">
+                <div class="stories-title"></div>
+            </div>
+        </a>
+        <a href="story/collection/">
+            <div class="stories-item">
+                <img src="" alt="Adventure Stories">
+                <div class="stories-title"></div>
+            </div>
+        </a>
+        
     </div>
 
     <!-- Bottom Navbar -->
