--- a/story/collection/monikaandradhika.html
+++ b/story/collection/monikaandradhika.html
@@ -65,10 +65,136 @@
     </style>
 </head>
 <body>
-    <div class="content"></div>
-    <div class="content">
-        
-    </div>
+    <div class="post_body" id="pid_77989">
+
+        <span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">बिहारी कुछ देर सोचता हैं फिर बोलता हैं- तू इतने यकीन से कैसे कह सकता हैं.. अगर हम जैसा चाह रहें हैं वैसे नहीं हुआ तो.......</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">विजय- तो अब बता मुझे.... हैं कोई दूसरा रास्ता हमारे पास... एक आखरी बाज़ी खेल कर देख लेते हैं... शायद कोई सल्यूशन निकल जाए... अगर कोई सल्यूशन नहीं निकेलगा तो तू राधिका से सीधा बात करना इसके बारे में शायद वो मान जाए....</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">बिहारी हंसते हुए- तुझे क्या लगता हैं कि उसके साथ इतना कुछ हम ने किया हैं और वो आसानी से मान जाएगी... खैर तू घबरा मत अगर वो राहुल को जाकर सब बक भी देगी तो भी राहुल हम सब का कुछ नहीं बिगाड़ पाएगा.. हां मगर हमे कुछ दिनों के लिए अंडरग्राउंड होना ज़रूर पड़ेगा...ऐसे ही काफ़ी देर तक वो दोनो प्लॅनिंग बनाते हैं और विजय फिर कमरे से बाहर झट से निकल जाता हैं. और करीब 1/2 घंटा में वो फिर वापस आता हैं... मगर इस बार वो अकेले नहीं आता साथ में उसके कोई और भी आई थी... और जब वो उसे लेकर राधिका के सामने जाता हैं तो राधिका बड़े गौर से उस औरत को देखने लगती हैं..</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">ये औरत और कोई नहीं बल्कि मोनिका ही थी... राधिका के दिल में फिर से मोनिका के प्रति नफ़रत उमड़ पड़ती हैं और वो अपना मूह दूसरी तरफ फेर लेती हैं... मोनिका भी चुप चाप वहीं खड़ी रहती हैं... बिहारी तो चुप चाप एक मूर्ति की तरह खड़ा तमाशा देख रहा था और वहीं जग्गा भी विजय के बगल में खड़ा था... तभी विजय बोलना शुरू करता हैं...</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">विजय- देख राधिका अब तेरी रिहाई में केवल 11 घंटे ही बचे हैं... यानी सुबेह के 7 बजे तक तू अपने घर जा सकती हैं मगर इस वक़्त तुझे इन 11 घंटों में जो भी बोला जाएगा तू वो सब कुछ करेगी.. इस वक़्त तू हम सब की रंडी हैं... और इसे तो तू अच्छे से जानती होगी.. ये तेरी नयी दोस्त...मोनिका..उर्फ तन्या...</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">राधिका एक बार फिर से विजय की ओर नफ़रत से देखती हैं मगर कुछ नहीं कहती...</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">विजय- तेरे लिए ये खुशी की बात हैं कि हम ने तेरी सारी शर्तें पूरी कर दी हैं.. अब हम ना तेरे आशिक़ को कुछ करेंगे और ना ही तेरी सहेली निशा को... और अब तो तेरा भाई कृष्णा भी एक दो दिन में जैल से रिहा हो जाएगा.. और तेरा बापू तो जैल से अब आज़ाद हो ही चुका हैं.. चिंता मत कर तेरे अपने चाहने वालों से तेरी जल्दी ही मुलाकात होगी... बस थोडा सा और इंतेज़ार....</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">राधिका- अब क्या बच गया हैं मुझे और नीचा गिराने में...तुम लोगों ने तो कोई कसर नहीं छोड़ी.... बोलो अब जो कुछ बच गया हो वो भी मैं इन 11 घंटों में तुम्हारी हर ख्वाहिश पूरा कर देती हूँ... बोलो क्या चाहते हो तुम..</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">राधिका के ऐसे वयहहार से विजय की मानो बोलती बंद हो जाती हैं मगर फिर उसके चेहरे पर हँसी आ जाती हैं और वो फिर से कहता हैं..</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">विजय- नाराज़ क्यों होती हैं मेरी जान ऐसा तो हैं नहीं कि चुदाई के इस खेल में केवल हमे ही मज़ा आता हैं. मज़ा तो तू भी बहुत लेती हैं... अगर तुझे मज़ा नहीं आता तो हम सब के पैरों में गिरकर हम से अपनी चूत चुदवाने के लिए भीख नहीं मांगती... खैर मुझे तो अब तेरे साथ एक नया गेम खेलना हैं और मैं जानता हूँ कि तू इस बार भी हमे निराश नहीं करेगी... बोल करेगी ना हम जो कहेंगे..</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">राधिका एक नज़र बिहारी पर डालती हैं वो अब भी खामोश था.. फिर वो झट से अपने जिस्म पर ओढ़ा हुआ शॉल निकाल कर अपने बदन से अलग कर देती हैं... राधिका का नंगा जिस्म उन सब की आँखों से सामने हो जाता हैं... अब तो राधिका के अंदर शरम लगभग ख़तम हो चुकी थी..इसलिए अब उसके मन में कोई झीजक नही थी.. मोनिका बड़े गौर से उसे देख रही थी...</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">विजय- चल मेरी रंडी अब तुझे भी कहना पड़ेगा क्या अपने कपड़े उतारने के लिए... चल तू भी फटफाट अपने सारे कपड़े उतार.. मोनिका कुछ नहीं कहती और अपना हाथ धीरे से अपनी साड़ी की ओर ले जाती हैं और एक एक कर अपने सारे कपड़े उतारना शुरू करती हैं. कुछ देर में वो भी पूरी नंगी हो जाती हैं...</span></span>
+</div>
+<div class="post_body" id="pid_77990">
+
+    <span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">विजय- अभी तक तो हम ने कई सारे तुम दोनो के शोज देखे हैं. मगर लेज़्बीयन शो कभी नहीं देखा.. लेज़्बीयन जानती हैं ना मेरी जान.. जैसे पॉर्न मूवीस में होता हैं..औरत और औरत में... तुम दोनो को आज एक दूसरे की प्यास आपस में बुझानी हैं.. और हम सब यहाँ बैठ कर तुम्हारा लाइव शो देखेंगे... चलो फटाफट शुरू हो जाओ...</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">मोनिका ना चाहते हुए भी राधिका के पास जाती हैं और उसके बगल में बैठ जाती हैं.. राधिका ने भी सिर्फ़ पॉर्न मूवीस में लेज़्बीयन सेक्स देखे थे मगर ऐसा आज पहली बार उसके साथ होने वाला था... उसे बहुत अजीब लग रहा था... तभी मोनिका अपना एक हाथ राधिका के सिर के पीछे ले जाती हैं और राधिका के होंटो को चूम लेती हैं.. राधिका को ये सब बहुत अजीब लग रहा था... और इस तरह का सेक्स मोनिका ने भी आज तक नहीं किया था.. वो भी बड़ी आसमंजश में थी....</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">थोड़ी देर के बाद वो दोनो एक दूसरे के होंटो को चूसना शुरू करते हैं और मोनिका धीरे धीरे अपना जीभ राधिका के गालों से फिराते हुए उसके पीठ तक ले जाती हैं. अब राधिका फिर से गरम होने लगती हैं.. उसे ये सब अजीब तो लग रहा था मगर अच्छा भी लग रहा था..मोनिका धीरे धीरे पहले राधिका के होंटो को चूस्ति हैं फिर उसकी गर्देन से होते हुए उसके निपल्स पर अपने जीभ फिराती हैं और राधिका भी एक हाथ मोनिका के बूब्स पर रखकर उसके निपल्स को कुरेदने लगती हैं... इधेर मोनिका भी अब गरम हो रही थी... मोनिका नीचे झुक कर राधिका की चूत के पास अपना मूह रख देती हैं और फिर अपनी जीभ उसकी चूत पर फिराती हैं... राधिका अपनी आँखें बंद कर लेती हैं और मस्ती में उसके मूह से सिसकारी निकल पड़ती हैं... वहीं डोर वो तीनों अपने लंड को अपने हाथों से मसल रहें थे... फिर एक एक कर सब अपने कपड़े उतारना शुरू कर देते हैं और कुछ देर में सब नंगे हो जाते हैं...</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">इधेर राधिका और मोनिका एक दूसरे के बदन को आपस में चूस और चाट रही थी.. कभी राधिका उसके निपल्स को अपने दाँतों से कुरेदति तो कभी मोनिका उसकी चूत में अपनी जीब डालकर अच्छे से चाटती... फिर वो दोनो 69 पोज़ीशन में होते हैं और एक तरफ मोनिका अपनी चूत चुसवाती हैं तो दूसरी तरफ राधिका... तभी विजय उनके करीब आता हैं और एक एक फुट का डिल्डो उन्हें थमा देता हैं... वो डिल्डो दोनो तरफ से यूज़ कर सकते हैं और उसकी मोटाई भी काफ़ी थी... मोनिका और राधिका समझ जाती हैं कि उन्हें क्या करना हैं.. तभी राधिका वो डिल्डो अपने हाथ में लेती हैं और उसे मोनिका की चूत पर रखकर धीरे धीरे प्रेशर बढ़ाने लगती हैं. वो डिल्डो धीरे धीरे उसकी चूत में समाता चला जाता हैं और करीब 8 इंच अंदर जाने के बाद राधिका भी उस डिल्डो पर अपनी चूत रख देती हैं और धीरे धीरे वो उसपर बैठती चली जाती हैं...</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">कमरे में इस वक़्त पूरा गरमा गरम महॉल था... थोड़ी देर के बाद राधिका की चूत के अंदर वो डिल्डो 8 इंच पूरा चला जाता हैं... उधेर मोनिका भी अपना एक हाथ राधिका के निपल्स पर ले जाती हैं और उसको मसल्ति हैं और अपनी जीभ से राधिका की जीभ को चाटना शुरू करती हैं... इस वक़्त दोनो पूरी मस्ती में थी... उन्हें ये भी नहीं मालूम था कि वो दोनो क्या कर रहें हैं... धीरे धीरे कभी मोनिका अपनी चूत पर दबाव डालती तो कभी राधिका .. जब उन तीनों को नहीं बर्दास्त होता तो वो सब लोग बारी बारी से राधिका और मोनिका के अगल बगल आते हैं.. और जग्गा आकर पहले मोनिका के बूब्स को मसलता हैं और फिर उसकी गान्ड पर अपने हाथ फेरता हैं.</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">विजय उन दोनो को अपने पास आने को कहता हैं मगर उनकी चूतो से वो डिल्डो नहीं निकालने देता... वो पहले तो राधिका के बूब्स को पूरी ताक़त से मसलता हैं और एक हाथ से मोनिका के बूब्स को दबाता हैं.. दोनो के मूह से सिसकारी निकल जाती हैं..तभी वो झट से बिस्तेर पर पीठ के बल सो जाता हैं और मोनिका को अपने उपर आने को कहता हैं... मोनिका भी समझ जाती है कि अब वो उसकी गान्ड मारना चाहता हैं..फिर वो अपनी चूत में रखा डिल्डो बाहर निकालती हैं और वो विजय के उपर आती हैं..</span></span>
+</div>
+<div class="post_body" id="pid_77991">
+
+    <span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">मोनिका भी चुप चाप अपनी गान्ड विजय के लंड पर रखकर धीरे धीरे बैठती चली जाती हैं... धीरे धीरे उसका लंड मोनिका की गान्ड में जाना शुरू हो जाता हैं.. और विजय अपने दोनो हाथों से मोनिका के दोनो बूब्स को अपनी मुट्ठी में थाम लेता हैं और पूरी ताक़त से उन्हें बेरहमी के साथ मसलना शुरू करता हैं... उधेर राधिका भी उसके उपर आती हैं और फिर से वो डिल्डो मोनिका की चूत में डालती हैं और वो भी अपनी चूत पर दबाव डालती हैं... इस वक़्त ऐसी सिचुयेशन्स थी कि विजय मोनिका की गान्ड मार रहा था और मोनिका अपनी पीठ के बल लेटी हुई अपनी चूत में डिल्डो ली हुई थी और उसके उपर राधिका अपनी चूत आगे पीछे कर रही थी.. मोनिका की तो हालत खराब थी...और साथ ही साथ दोनो के लिप्स एक दूसरे से जुड़े हुए थे. कभी मोनिका राधिका के होंटो को चूस्ति तो कभी राधिका....</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">तभी जग्गा भी राधिका के पास आता हैं और अपना लंड राधिका की गान्ड में डालने लगता हैं...राधिका भी अपनी गान्ड पूरा फैला देती हैं और धीरे धीरे जग्गा का पूरा लंड राधिका की गान्ड में समा जाता हैं... फिर बिहारी वहीं उनके सामने जाता हैं और अपना लंड राधिका के मूह के पास रख देता हैं... राधिका भी एक नज़र बिहारी को देखती हैं फिर वो उसका लंड धीरे धीरे अपने मूह में पूरा लेने लगती हैं और बिहारी राधिका के सिर के बाल को पकड़कर अपना पूरा लंड अंदर बाहर करता हैं... कमरे में सबकी आहें गूँज रही थी....बिहारी का लंड कभी राधिका चूसी तो कभी मोनिका.. बारी बारी वो दोनो बिहारी का लंड चूस रही थी...मोनिका और राधिका का ऐसा पहला अनुभव था पर जो भी था वो बहुत मज़ेदार था....</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">इस वक़्त राधिका और मोनिका की चूत गान्ड में एक तरफ डिल्डो था तो दूसरी तरफ जग्गा और विजय का लंड...जब भी जग्गा और विकज का लंड आगे पीछे होता उनकी चूत में रखा डिल्डो भी अंदर बाहर जाता.. और उधेर बिहारी बारी बारी से कभी राधिका की मूह में अपना लंड पेलता तो कभी मोनिका के मूह में... राधिका और मोनिका झरने के काफ़ी करीब थी और उनकी मादक सिसकारी निकल रही थी..और उधेर जग्गा और विजय अपने लंड तेज़ी से आगे पीछे कर रहें थे... पाँचों आपस में एक साथ एक दूसरे की चूत और लंड की प्यास बुझाने में लगे हुए थे.... तभी राधिका ज़ोर से चीख पड़ती हैं और उसका ऑर्गॅनिसम हो जाता हैं और साथ ही साथ मोनिका भी चिल्ला पड़ती हैं और वो भी अपनी आँखें बंद करके झरने लगती हैं...थोड़ी देर तक इसी तरह चुदाई का दौर चलता हैं...</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">अभी तक बिहारी ,जग्गा और विजय तीनों फारिग नहीं हुए थे वो तीनों उठते हैं और बिस्तेर के पास खड़े हो जाते हैं... अभी भी राधिका और मोनिका की साँसें तेज़ चल रही थी और उनकी आँखें बंद थी... तभी विजय वहीं ड्रॉयर के पास जाता हैं और उसमें ड्रग्स की शीशी और इंजेक्षन लेकर आता हैं... इस वक़्त राधिका पूरी तरह से ड्रग्स की अडिक्ट हो चुकी थी.. जब तक वो ड्रग्स नहीं लेती वो बहुत बेचैन रहती... इन सब ने उसे ड्रग्स की पूरी तरह से अडिक्ट बना दिया था... तभी विजय वो इंजेक्षन पहले राधिका के हाथों में लगाता हैं फिर वो दूसरा इंजेक्षन मोनिका के हाथों में लगाता हैं.. वैसे ये पहली बार था कि मोनिका को ड्रग्स का इंजेक्षन दिया गया था... जो हालत राधिका की पहली बार हुई थी वही हालत अभी इस समय मोनिका की थी...</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">फिर बिहारी जग्गा और विजय ये तीनों वियाग्रा की गोली लेते हैं और फिर से चुदाई का वहीं दौर शुरू हो जाता हैं... इस बार बिहारी बिस्तेर पर लेट जाता हैं और राधिका को अपने लंड पर बैठने को कहता हैं.. राधिका अपनी गान्ड उसके लंड पर रखकर धीरे धीरे बैठ जाती हैं और उधेर विजय उसके पास आता हैं और अपना लंड राधिका की चूत पर रखकर उसकी चूत में एक ही झटके में अपना पूरा लंड डाल देता हैं.. राधिका के मूह से सिसकारी निकल पड़ती हैं और पहले धीरे धीरे फिर बहुत तेज़ी से राधिका की चूत गान्ड की कुटाई शुरू हो जाती हैं... तभी जग्गा मोनिका को वहीं बिस्तेर पर लेटने को कहता हैं और अपनी चूत को वो राधिका के मूह पे रख देती हैं... राधिका भी मोनिका की चूत को धीरे धीरे चाटना शुरू करती हैं और इधेर अपनी चूत और गान्ड एक साथ चुदवाती हैं... तभी जग्गा उसके उपर आता हैं और अपना लंड मोनिका की गान्ड में डाल देता हैं और उसकी गान्ड चोदने लगता हैं...</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">राधिका और मोनिका फिर से पूरा गरम हो चुकी थी और उधेर विजय और बिहारी अपने लंड आगे पीछे राधिका की चूत और गान्ड में डाले हुए थे... और राधिका इधेर मोनिका की चूत भी चाट रही थी... जग्गा भी पूरे ज़ोर शोर से लगा हुआ था... ऐसे ही करीब 15 मिनिट के बाद मोनिका अब नीचे आती हैं और विजय और बिहारी उसकी चूत और गान्ड मारते हैं और इस बार राधिका अपनी चूत मोनिका के मूह पर रख कर अपनी गान्ड जग्गा से मरवाती हैं..</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">धीरे धीरे विजय और बिहारी मोनिका की चुदाई करीब 15 मिनिट तक ऐसे ही करते हैं और उधेर मोनिका की हालत खराब होने लगती है..</span></span><br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">और तभी विजय अपने लंड पर प्रेशर और तेज़ बनाने लगता हैं और उधेर बिहारी का भी प्रेशर तेज़ हो जाता हैं.. तभी वो चीज़ होता हैं जो किसी ने कभी उम्मीद नहीं की थी. इस तरह बिहारी और विजय का प्रेशर बनाए रखने की वजह से मोनिका को बर्दास्त से बाहर हो जाता हैं वो और चिलाते हुए उसकी मूत बाहर निकल पड़ती हैं... मोनिका तो बहुत कंट्रोल करती हैं मगर अब कुछ नहीं हो सकता था. वहीं बिस्तेर थोड़ा सा गीला हो जाता हैं और मोनिका शरम के मारे अपनी आँखें बंद कर लेती हैं...</span></span>
+</div>
+<div class="post_body" id="pid_77992">
+
+    <span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">ये सब देखकर बिहारी मुस्कुरा देता हैं और वो विजय से कहता हैं..</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">बिहारी- यार थोड़ा धीरे मार ना अपनी जानेमन की गान्ड को.. बेचारी की मूत निकल गयी.. और इतना कहकर वो दोनो ज़ोर ज़ोर से हँसने लगते हैं..मोनिका को तो ऐसा लग रहा था कि वो कहीं जाकर अपना मूह छुपा ले.. राधिका भी उनकी बातो से शरम्शार हो जाती हैं और अपनी आँखें बंद कर लेती हैं...</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">ऐसे ही ये दौरा चलता रहता हैं और तब तक चलता हैं जब तक उन तीनो का कम नहीं निकल जाता... मगर आज यहाँ पर ये खेल बिहारी नहीं विजय खेल रहा था.. और वो निहायती बहुत गंदा किसम का इंसान था... जब उनका कम मोनिका की चूत और गान्ड में निकल जाता हैं तो वो राधिका से उसकी चूत और गान्ड से वो कम उससे चाट कर सॉफ करवाता हैं और राधिका बिना कुछ कहें अपने जीभ से मोनिका की चूत और गान्ड से बहते हुए कम को चाट ती हैं और फिर उसकी गान्ड का भी कम पीती हैं..</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">इधेर मोनिका भी वही चीज़ दोहराती हैं और राधिका का गान्ड चाट चाट कर सॉफ करती हैं... ऐसे ही ये दौरा रात के करीब 3 बजे तक चलता हैं और इस बीच इन सब का कम तीन बार निकलता हैं और इस बीच राधिका और मोनिका दोनो उन सब का कम बारी बारी चाटती हैं और साथ ही साथ कम अपने मूह में ट्रान्स्फर भी करती हैं..जो ये सब आज राधिका कर रही थी वो निहायती एक बहुत गंदा काम था मगर इन एक हफ्तों में वो इस हद्द तक गिर चुकी थी कि अब उसे ये सब कुछ भी गंदा नहीं लग रहा था... रात के करीब 3 बजे सब थक कर वहीं एक दूसरे से लिपट कर सो जाते हैं....</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">करीन 6 बजे उन सब की नींद खुलती हैं.. इस वक़्त सब के जिस्म पर कपड़े के एक रेशा भी नहीं था... मोनिका तुरंत उठती हैं और झट से अपने कपड़े पहनने लगती हैं और इधेर राधिका भी वहीं रखा शॉल अपने जिस्म पर ओढ़ लेती हैं... बिहारी जग्गा और विजय भी अपने कपड़े पहन लेते हैं...</span></span><br />
+<br />
+<br />
+<br />
+<span style="color: #400080;" class="mycode_color"><span style="font-size: large;" class="mycode_size">विजय- चल मेरी जान आज से तू आज़ाद हो गयी... जा आज मैं तुझे आज़ाद करता हूँ. फिर विजय वहीं रखे ड्रॉयर में से वो कांट्रॅक्ट पेपर्स निकालता हैं और वो मोनिका को थमा देता हैं..जा आज के बाद तू पूरी तरह आज़ाद हैं... मोनिका धीरे से मुस्कुरा देती हैं और वो वहाँ से जाने के लिए मुड़ती हैं तभी राधिका की ताली की आवाज़ सुनकर वो वहीं थितक जाती हैं.</span></span>
+</div>
+
+
+
     
 </body>
 </html>
