Your commit message

--- a/stories.html
+++ b/stories.html
@@ -317,7 +317,7 @@
             </div>
         </a>
 
-        <a href="story/collection/Rakail.html">
+        <a href="story/collection/Rakhail.html">
             <div class="stories-item">
                 <img src="https://i.pinimg.com/564x/30/96/64/3096645f40212d990724a3d80623166f.jpg" alt="Adventure Stories">
                 <div class="stories-title">Muslim ki Rakhail</div>
