--- a/stories.html
+++ b/stories.html
@@ -324,10 +324,10 @@
             </div>
         </a>
 
-        <a href="story/collection/">
+        <a href="story/collection/ramola.html">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <div class="stories-title">Ramola</div>
             </div>
         </a>
 
