--- a/stories.html
+++ b/stories.html
@@ -326,7 +326,7 @@
 
         <a href="story/collection/ramola.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
+                <img src="https://i.pinimg.com/736x/0f/44/37/0f44373b87dddb4d77f40d240bcf670e.jpg" alt="Adventure Stories">
                 <div class="stories-title">Ramola</div>
             </div>
         </a>
