--- a/stories.html
+++ b/stories.html
@@ -331,10 +331,10 @@
             </div>
         </a>
 
-        <a href="story/collection/">
+        <a href="story/collection/housewife.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://i.pinimg.com/564x/2a/3c/ae/2a3cae5d1524ca5423cf774ded910fa9.jpg" alt="Adventure Stories">
+                <div class="stories-title">House wife bani randi</div>
             </div>
         </a>
         <a href="story/collection/">
