--- a/videos.html
+++ b/videos.html
@@ -107,35 +107,188 @@
             <div class="video-item">
                 <div class="video-title">Video Title</div> <!-- Title for Video 1 -->
                 <video controls class="video-player">
-                    <source src="videos/collection/1.mp4" type="video/mp4">
+                    <source src="https://trailerscdn1.mood-universe.com/trailers/ep/coprldamirah.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="video-item">
                 <div class="video-title">Video Title</div> <!-- Title for Video 1 -->
                 <video controls class="video-player">
-                    <source src="videos/collection/2.mp4" type="video/mp4">
+                    <source src="https://trailerscdn1.mood-universe.com/trailers/ep/cop8.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="video-item">
                 <div class="video-title">Video Title</div> <!-- Title for Video 1 -->
                 <video controls class="video-player">
-                    <source src="videos/collection/3.mp4" type="video/mp4">
+                    <source src="https://cdnp.kink.com/imagedb/106306/trailer/106306_trailer_high.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="video-item">
                 <div class="video-title">Video Title</div> <!-- Title for Video 1 -->
                 <video controls class="video-player">
-                    <source src="videos/collection/4.mp4" type="video/mp4">
+                    <source src="https://www.graias.com/imgs/movies/movie_217/trailer.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="video-item">
                 <div class="video-title">Video Title</div> <!-- Title for Video 1 -->
                 <video controls class="video-player">
-                    <source src="videos/collection/5.mp4" type="video/mp4">
+                    <source src="https://www.graias.com/imgs/movies/movie_372/trailer.mp4" type="video/mp4">
                 </video>
             </div>
 
             
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="https://cdnp.kink.com/imagedb/103103/trailer/103103_trailer_high.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="video-item">
+                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <video controls class="video-player">
+                    <source src="videos/collection/6.mp4" type="video/mp4">
+                </video>
+            </div>
             <div class="video-item">
                 <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
                 <video controls class="video-player">
